--- a/Hunar intern L-1/task-1/index.html
+++ b/Hunar intern L-1/task-1/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#Projects">Services</a></li>
+                    <li><a href="#Projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
